--- a/style.css
+++ b/style.css
@@ -14,12 +14,40 @@ body {
 .genius {
   display: grid;
   grid-template-areas:
-    'green red' /*para nomear cada espaço do grid*/
-    'yellow blue';
+    'greencolor redcolor' /*para nomear cada espaço do grid*/
+    'yellowcolor bluecolor';
   grid-gap: 10px; /*para ficar com o risco/divisão no meio das cores*/
   border: 1px solid #ffffff;
   background-color: #ffffff;
   border-radius: 100%;
   width: 700px;
   height: 700px;
+}
+
+.blue {
+  grid-area: bluecolor;
+  background-color: blue;
+  border-bottom-right-radius: 100%;
+}
+
+.red {
+  grid-area: redcolor;
+  background-color: red;
+  border-top-right-radius: 100%;
+}
+
+.yellow {
+  grid-area: yellowcolor;
+  background-color: yellow;
+  border-bottom-left-radius: 100%;
+}
+
+.green {
+  grid-area: greencolor;
+  background-color: green;
+  border-top-left-radius: 100%;
+}
+
+.selected {
+  opacity: 0.8;
 }
